Going to jdk 17 and 21 (#124)
* Ignore non-`LazyDocCommentTable` instances as they make the JavaDoc generation due to type mismatch.
* Remove unnecessary options given to JavaDoc.
* Add stylesheet for Java17 and Jva21.
* Remove several pieces of unnecessary code.
* Provide an implementation note for AsciiDocTrees#getType(DocTreePath) method.
Also, make pom.xml use JDK 11 for compilation and testing since it seems working with JDK21 project.
* Improve an implementation note for AsciiDocTrees#getType(DocTreePath) method.
* Improve several JavaDocs.
* Update unit tests.
* Enable AsciidocletIntegrationTest.

Closes #122 
---------

Co-authored-by: Hiroshi Ukai <dakusui@gamil.com>